<resources>
    <string name="app_name">Weaver</string>
    <string name="generic_okay">Okay</string>
    <string name="generic_cancel_arrow">\u21BA</string>
    <string name="generic_cancel_text">Cancel</string>
    <string name="generic_error_unknown">Sorry, something went wrong. We will try to fix this in an upcoming version.</string>
    <string name="generic_error_required_field">This field is required</string>

    <string name="themed_activity_invalid_id_error_title">Error opening theme for campaign</string>
    <string name="themed_activity_invalid_id_error_text">Sorry, something went wrong. We will work on fixing this in an upcoming version.</string>

    <string name="activity_title_campaign_screen">Campaigns</string>
    <string name="activity_title_character_library">Characters</string>
    <string name="activity_title_character_library_add">Add Character</string>
    <string name="activity_title_character_library_edit">Edit Character</string>
    <string name="activity_title_character_library_view">View Character</string>
    <string name="activity_title_character_add_event">Add Event</string>
    <string name="activity_title_campaign_synopsis">Synopsis</string>
    <string name="activity_title_add_campaign_screen">Add Campaign</string>
    <string name="activity_title_edit_campaign_screen">Edit Campaign</string>
    <string name="activity_title_set_theme">Set Theme</string>
    <string name="activity_title_configure_name_sets">Configure Name Sets</string>
    <string name="activity_title_settings_screen">Settings</string>
    <string name="activity_title_manage_name_sets">Configure Name Sets</string>
    <string name="activity_title_add_name_set">Add Name Set</string>
    <string name="activity_title_view_scheduled_to_delete">Scheduled to Delete</string>
    <string name="activity_title_developer_functions">Developer Functions</string>

    <string name="activity_campaign_list_select_sort_order">Sort Order</string>
    <string name="activity_campaign_list_add_campaign">Add Campaign</string>
    <string name="activity_campaign_list_menu_manage_name_sets">Name Sets</string>
    <string name="activity_campaign_list_menu_settings">Settings</string>
    <string name="activity_campaign_list_menu_view_scheduled_to_delete">Scheduled to Delete</string>
    <string name="activity_campaign_list_menu_developer_options">Developer Options</string>
    <string name="activity_campaign_list_cd_manage_player_characters">Manage Player Characters</string>

    <string name="activity_edit_campaign_menu_confirm">Confirm</string>
    <string name="activity_edit_campaign_invalid_id_error_title">Error opening campaign</string>
    <string name="activity_edit_campaign_invalid_id_error_text">Sorry, something went wrong when trying to open the campaign. We will work on fixing this in an upcoming version.</string>
    <string name="activity_edit_campaign_campaign_name_hint">Campaign Name</string>
    <string name="activity_edit_campaign_system_name_hint">Roleplaying System Name</string>
    <string name="activity_edit_campaign_synopsis_tab">Synopsis</string>
    <string name="activity_edit_campaign_name_sets_tab">Name Sets</string>
    <string name="activity_edit_campaign_set_theme_button_cd">Set Theme</string>
    <string name="activity_edit_campaign_select_campaign_image_button_cd">Select Campaign Image</string>
    <string name="activity_edit_campaign_synopsis_hint">Write a short synopsis or some notes here</string>

    <string name="activity_character_library_deactivate_campaign">Deactivate Campaign</string>
    <string name="activity_character_library_campaign_deactivated">Campaign deactivated</string>
    <string name="activity_character_library_activate_campaign">Activate Campaign</string>
    <string name="activity_character_library_campaign_activated">Campaign reactivated</string>

    <string name="activity_set_theme_menu_apply_theme">Apply Theme</string>
    <string name="activity_set_theme_menu_apply">Apply</string>
    <string name="activity_set_theme_apply_fantasy_preset">Fantasy Preset</string>
    <string name="activity_set_theme_apply_modern_preset">Modern Preset</string>
    <string name="activity_set_theme_invalid_id_error_title">Error editing theme</string>
    <string name="activity_set_theme_invalid_id_error_text">Sorry, something went wrong when trying to edit the theme. We will work on fixing this in an upcoming version.</string>
    <string name="activity_set_theme_customize_headline">Customize</string>
    <string name="activity_set_theme_action_color">Action Color</string>
    <string name="activity_set_theme_background_color">Background Color</string>
    <string name="activity_set_theme_item_color">Item Color</string>
    <string name="activity_set_theme_background_text_color">Background Text Color</string>
    <string name="activity_set_theme_item_text_color">Item Text Color</string>
    <string name="activity_set_theme_preview_text">ABC</string>
    <string name="activity_set_theme_cd_apply">Apply</string>
    <string name="activity_set_theme_discard_changes">Discard Changes?</string>
    <string name="activity_set_theme_discard_changes_confirm">Discard</string>
    <string name="activity_set_theme_pick_action_color">Pick Action Color</string>
    <string name="activity_set_theme_pick_screen_background_color">Pick Background Color</string>
    <string name="activity_set_theme_pick_background_text_color">Pick Background Text Color</string>
    <string name="activity_set_theme_pick_item_background_color">Pick Item Background Color</string>
    <string name="activity_set_theme_pick_item_text_color">Pick Item Text Color</string>

    <string name="activity_character_view_menu_edit_character">Edit Character</string>

    <string name="activity_player_character_list_invalid_id_error_title">Error managing player characters</string>
    <string name="activity_player_character_list_invalid_id_error_text">Sorry, something went wrong when trying to manage player characters. We will work on fixing this in an upcoming version.</string>
    <string name="activity_player_character_list_character_name_hint">Character Name</string>
    <string name="activity_player_character_list_player_name_hint">Player Name</string>
    <string name="activity_player_character_list_pick_color_hint">Pick Color</string>
    <string name="activity_player_character_list_example_text">%1$s (%2$s) betrayed her trust.</string>
    <string name="activity_player_character_list_change_color_hint">Change color</string>
    <string name="activity_player_character_list_add_character">Add Character</string>
    <string name="activity_player_character_list_delete_character_cd">Delete Character</string>
    <string name="activity_player_character_list_usage_hint">Player characters will be auto-completed while typing and also highlighted within texts.</string>

    <string name="activity_view_scheduled_to_delete_scheduled_items">Scheduled</string>
    <string name="activity_view_scheduled_to_delete_unscheduled_items">Unscheduled</string>
    <string name="activity_view_scheduled_to_delete_clear_all_scheduled_items">Clear All</string>

    <string name="campaign_list_item_edit">EDIT</string>

    <string name="cd_manage_player_characters">Manage Player Characters</string>
    <string name="cd_edit_campaign">Edit Campaign</string>
    <string name="cd_synopsis">Synopsis</string>
    <string name="cd_delete">Delete</string>

    <string name="fragment_theme_preview_background_text">Background Text</string>
    <string name="fragment_theme_preview_item_text">Item Text</string>
    <string name="fragment_theme_preview_item_text_secondary">Item Text Secondary</string>
    <string name="fragment_theme_preview_button_text">Button</string>

    <string name="asset_converter_time_expired">Expired</string>
    <string name="asset_converter_time_seconds_remaining">Seconds remaining</string>
    <string name="asset_converter_time_minutes_remaining">%l minutes remaining</string>
    <string name="asset_converter_time_hours_remaining">%l hours remaining</string>
    <string name="asset_converter_time_about_a_day_remaining">About day remaining</string>
    <string name="asset_converter_time_days_remaining">%l days remaining</string>
    <string name="asset_converter_time_over_a_week_remaining">Over a week remaining</string>
    <string name="asset_converter_time_about_a_month_remaining">About a month remaining</string>
    <string name="asset_converter_time_month_remaining">%l month remaining</string>
    <string name="asset_converter_time_over_a_year_remaining">Over a year remaining</string>

    <string-array name="activity_campaign_list_sort_order_spinner_options">
        <item>Campaign Name</item>
        <item>System Name</item>
        <item>Last Used</item>
        <item>Last Edited</item>
        <item>Created</item>
    </string-array>

    <string name="not_implemented_yet">Not Implemented Yet</string>

</resources>
