<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="4dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        tools:background="@color/fantasyPrimaryDarkColor"
        android:paddingBottom="12dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            tools:textColor="@color/white"
            android:id="@+id/fragment_theme_preview_background_text"
            android:text="@string/fragment_theme_preview_background_text"
            android:textSize="24sp"
            android:layout_marginTop="22dp"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/fragment_theme_preview_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/fragment_theme_preview_button"
            android:text="@string/fragment_theme_preview_button_text"
            tools:background="@color/fantasySecondaryLightColor"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- TODO: The background should be generated with round edges via code -->
        <FrameLayout
            android:id="@+id/fragment_theme_preview_item"
            tools:background="@color/fantasySecondaryColor"
            android:layout_marginTop="22dp"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintTop_toBottomOf="@id/fragment_theme_preview_background_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                tools:textColor="@color/pitch_black"
                android:textSize="18sp"
                android:text="@string/fragment_theme_preview_item_text"
                android:layout_marginTop="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </FrameLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
