<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/pitch_black"
    android:paddingBottom="12dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".campaigns.CampaignEditorActivity">

    <!-- TODO: Use data-binding for theme values (with preset for new campaigns) -->

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@color/modernPrimaryColor"
        app:title="need to do this per code"
        app:subtitle="campaign name if present"
        app:subtitleTextColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_campaign_screen_campaign_name_text_input_layout"
        style="@style/AppThemeModern.EditTextInputLayout"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/activity_edit_campaign_campaign_name_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_campaign_screen_campaign_name"
            android:background="@drawable/modern_button_background"
            android:textCursorDrawable="@drawable/white_cursor"
            android:inputType="textCapWords"
            android:textColor="@color/white"
            android:paddingTop="12dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="6dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_campaign_screen_system_name_text_input_layout"
        style="@style/AppThemeModern.EditTextInputLayout"
        app:layout_constraintTop_toBottomOf="@id/edit_campaign_screen_campaign_name_text_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/edit_campaign_screen_set_theme_button"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/activity_edit_campaign_system_name_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_campaign_screen_system_name"
            android:background="@drawable/modern_button_background"
            android:textCursorDrawable="@drawable/white_cursor"
            android:inputType="textCapWords"
            android:textColor="@color/white"
            android:paddingTop="12dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="6dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/edit_campaign_screen_set_theme_button"
        android:src="@drawable/ic_brush"
        android:contentDescription="@string/activity_edit_campaign_set_theme_button_cd"
        android:background="@drawable/modern_button_background"
        app:layout_constraintStart_toEndOf="@id/edit_campaign_screen_system_name_text_input_layout"
        app:layout_constraintEnd_toStartOf="@+id/edit_campaign_screen_select_campaign_image"
        app:layout_constraintBottom_toBottomOf="@id/edit_campaign_screen_system_name_text_input_layout"
        android:paddingTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_width="48dp"
        android:layout_height="48dp"/>

    <ImageButton
        android:id="@+id/edit_campaign_screen_select_campaign_image"
        android:src="@drawable/ic_select_campaign_image"
        android:contentDescription="@string/activity_edit_campaign_select_campaign_image_button_cd"
        android:background="@drawable/modern_button_background"
        app:layout_constraintTop_toTopOf="@id/edit_campaign_screen_set_theme_button"
        app:layout_constraintStart_toEndOf="@+id/edit_campaign_screen_set_theme_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/edit_campaign_screen_system_name_text_input_layout"
        android:paddingTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_width="48dp"
        android:layout_height="48dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
