<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:background="@color/pitch_black"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".players.PlayerCharacterListActivity">

    <ImageView
        tools:ignore="ContentDescription"
        android:id="@+id/player_character_list_divider"
        android:background="@color/modernSecondaryColor"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/player_character_list_character_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="2dp"/>

    <EditText
        android:id="@+id/player_character_list_character_name"
        android:inputType="textPersonName"
        android:background="@drawable/player_character_footer_element_background"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textCursorDrawable="@null"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:padding="8dp"
        android:drawableStart="@drawable/ic_character"
        android:drawablePadding="8dp"
        app:layout_constraintTop_toBottomOf="@id/player_character_list_divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/player_character_list_pick_color"
        app:layout_constraintBottom_toTopOf="@+id/player_character_list_player_name"
        app:layout_constraintHorizontal_weight="2"
        android:hint="@string/activity_player_character_list_character_name_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/player_character_list_player_name"
        android:inputType="textPersonName"
        android:background="@drawable/player_character_footer_element_background"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textCursorDrawable="@null"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:padding="9dp"
        android:drawableStart="@drawable/ic_player"
        android:drawablePadding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/player_character_list_character_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/player_character_list_character_name"
        app:layout_constraintBottom_toBottomOf="parent"
        android:hint="@string/activity_player_character_list_player_name_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:importantForAutofill="no" />

    <ImageView
        android:id="@+id/player_character_list_pick_color"
        android:onClick="onShowColorPickerClicked"
        android:src="@drawable/ic_pick_color"
        android:contentDescription="@string/activity_player_character_list_change_color_hint"
        app:layout_constraintTop_toBottomOf="@id/player_character_list_divider"
        app:layout_constraintBottom_toTopOf="@id/player_character_list_add_character"
        app:layout_constraintStart_toEndOf="@id/player_character_list_character_name"
        app:layout_constraintEnd_toStartOf="@id/player_character_list_character_text_example"
        app:layout_constraintHorizontal_weight="1"
        android:padding="4dp"
        android:layout_marginStart="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/player_character_list_character_text_example"
        android:enabled="false"
        android:text="@string/activity_player_character_list_example_placeholder"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@id/player_character_list_pick_color"
        app:layout_constraintTop_toBottomOf="@id/player_character_list_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/player_character_list_add_character"
        app:layout_constraintHorizontal_weight="1"
        android:layout_marginEnd="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/player_character_list_add_character"
        android:onClick="onAddPlayerCharacterClicked"
        android:background="@drawable/player_character_footer_element_background_hollow"
        android:textColor="@color/white"
        android:text="@string/activity_player_character_list_add_character"
        android:gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:padding="4dp"
        android:drawableStart="@drawable/ic_add_character"
        android:drawablePadding="8dp"
        app:layout_constraintTop_toTopOf="@+id/player_character_list_player_name"
        app:layout_constraintStart_toEndOf="@id/player_character_list_player_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:hint="@string/activity_player_character_list_player_name_hint"
        android:layout_marginEnd="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>

